--- a/consultarCliente.html
+++ b/consultarCliente.html
@@ -6,7 +6,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="menuLateral.css">
-    <title>Document</title>
+    <title>AlugaCars</title>
+    <link rel="shortcut icon" href="alugacars.ico" type="image/x-icon">
   </head>
   <body>
 
