adicionando modo light

--- a/consultarCliente.html
+++ b/consultarCliente.html
@@ -10,7 +10,6 @@
     <link rel="shortcut icon" href="alugacars.ico" type="image/x-icon">
   </head>
   <body>
-
     <nav class="menuLateral">
         <div class="btnAbrir">
             <i class="bi bi-list"></i>
@@ -46,6 +45,9 @@
     <div class="container">
       <h1>Consulta de Cliente</h1>
       <a href="cadastrarCliente.php"><i class="bi bi-person-add"></i> Adicionar Cliente</a>
+      <div id="trilho" class="trilho">
+        <div id="indicador" class="indicador"></div>
+      </div>
 
       <form method="post" action="consultarCliente.php">
         <label for="nome">nome</label>
@@ -55,4 +57,5 @@
       </form>
     </div>
   </body>
+  <script src="assets/light-mode.js"></script>
 </html>
