--- a/consultarCliente.html
+++ b/consultarCliente.html
@@ -51,11 +51,20 @@
 
       <form method="post" action="consultarCliente.php">
         <label for="nome">nome</label>
-        <input  type="text" name="nome" id="nome" />
+        <input  type="text" placeholder="nome" name="nome" id="nome" />
         <br /><br />
         <button type="submit">Consultar</button>
       </form>
     </div>
   </body>
+  <footer class="main-footer">
+        <p>&copy; 2025 AlugaCars - Desenvolvido por <strong>Júlio César</strong></p>
+
+        <div class="social-links">
+            <i class="bi bi-instagram"></i><a href="https://www.instagram.com/juii.cesar/" target="_blank">Instagram</a>
+            <i class="bi bi-linkedin"></i><a href="https://www.linkedin.com/in/j%C3%BAlio-c%C3%A9sar-correa-alves-dev/" target="_blank">LinkedIn</a>
+            <i class="bi bi-github"></i><a href="https://github.com/Juii-Cesar" target="_blank">GitHub</a>
+        </div>
+    </footer>
   <script src="assets/light-mode.js"></script>
 </html>
